# robotkernel

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  OpenCV.ipynb  README.rst  RESTinstance.ipynb  _toc.yml  apt.txt  conf.py  default.nix  dodo.py  environment.yml  example.ipynb  postBuild  quickstart.ipynb  requirements-python3.nix  requirements-python3.txt  requirements-python36-rf31.nix  requirements-python36-rf31.txt  requirements-python36-rf32.nix  requirements-python36-rf32.txt  requirements-python37-rf31.nix  requirements-python37-rf31.txt  requirements-python37-rf32.nix  requirements-python37-rf32.txt  requirements-python37-rf40.nix  requirements-python37-rf40.txt  requirements-python39-rf31.nix  requirements-python39-rf31.txt  requirements-python39-rf32.nix  requirements-python39-rf32.txt  requirements-python39-rf40.nix  requirements-python39-rf40.txt  requirements-python39-rf41.nix  requirements-python39-rf41.txt  (+24 more)
.github/workflows/: rtd-preview.yml  smoketest.yml
_templates/: lite-demo.html  sbt-sidebar-nav.html  sidebar-logo.html
atest/: Test Robot Notebook.ipynb
binder/: apt.txt  environment.yml  jupyter_notebook_config.json  postBuild  requirements.txt
docs/: Makefile  conf.py  environment.yml  example.ipynb  index.html  index.rst  install.rst  nbconvert.tpl  tutorial
docs/extras/: Exploreint REST API.ipynb  RESTinstance.ipynb
docs/notebooks/: 00 JupyterLab User Interface.html  00 Keyboard Shortcuts.ipynb  00 What is the Jupyter Notebook.ipynb  01 Keyboard Shortcuts.ipynb  01 Running Code.ipynb  02 Python XKCD.ipynb  03 Running Robot.ipynb  04 Robot XKCD.ipynb  05 Interactive Selenium.ipynb  06 Importing Notebooks.ipynb  07 Executable Keywords.ipynb  08 Interactive WhiteLibrary.ipynb  09 Prototyping Libraries.ipynb  DateLibrary.ipynb  Executable Keywords.ipynb  Makefile  RESTinstance.ipynb  SeleniumKeywords.ipynb  XX Interactive Python XKCD.ipynb  nbconvert.tpl  smoketest.ipynb
docs/robocon2020/: changelog.ipynb  index.ipynb
docs/tutorial/: 00 JupyterLab User Interface.html  00 What is the Jupyter Notebook.ipynb  01 Running Code.ipynb  02 Python XKCD.ipynb  03 Running Robot.ipynb  04 Robot XKCD.ipynb  05 Interactive Selenium.ipynb  06 Importing Notebooks.ipynb  07 Prototyping Keywords.ipynb  DateLibrary.ipynb  SeleniumKeywords.ipynb  XX Automating Browser.ipynb  XX Exploring REST API.ipynb  XX Interactive Python XKCD.ipynb
examples/: Full Page Screenshots.ipynb  Interactive Python XKCD.ipynb  JupyterLab.ipynb  LogAsGraph.ipynb  OpenCV.ipynb  README.md  RESTinstance.ipynb  SeleniumLibrary.ipynb
lite/: jupyter-lite.json  jupyter_lite_config.json  jupyter_videochat-0.6.0-py3-none-any.whl  jupyterlab_robotmode-0.4.0-py3-none-any.whl  overrides.json
lite/contents/: Example.ipynb  TryExcept.ipynb
lite/jupyterlite-robotkernel/: .prettierignore  MANIFEST.in  README.md  install.json  lerna.json  package.json  setup.cfg  setup.py  shell.nix
lite/jupyterlite-robotkernel/nix/: default.nix  sources.json
lite/jupyterlite-robotkernel/nix/pkgs/jupyterLiteEnv/: default.nix  pyproject.toml
lite/jupyterlite-robotkernel/nix/pkgs/jupyterWith/: default.nix
lite/jupyterlite-robotkernel/nix/pkgs/jupyterWith/nix/: sources.json
lite/jupyterlite-robotkernel/nix/pkgs/poetry2nix/: default.nix
lite/jupyterlite-robotkernel/nix/pkgs/poetry2nix/nix/: sources.json
lite/jupyterlite-robotkernel/py_src/jupyterlite_robotkernel/: __init__.py  _version.py  piplite.py
lite/jupyterlite-robotkernel/py_src/jupyterlite_robotkernel/addons/: piplite.py  robotkernel.py  wheels.json  wheels.py
lite/repl/: jupyter-lite.json
lite/retro/: jupyter-lite.json
nix/: default.nix  sources.json
nix/pkgs/pip2nix/: default.nix
nix/pkgs/pip2nix/nix/: sources.json  sources.nix
pkgs/sikulix/: default.nix
pkgs/sikulixlibrary/: default.nix  stop_remote_server.patch
robotkernel/: install.py  kernel.py
robotkernel/resources/: kernel.js
src/jupyterlab_robotmode/: README.md  package.json  tsconfig.json
src/jupyterlab_robotmode/jupyterlab_robotmode/: __init__.py
src/jupyterlab_robotmode/lib/: plugin.js
src/jupyterlab_robotmode/src/: index.ts  mode.ts  plugin.ts
src/jupyterlab_robotmode/typings/codemirror/: codemirror.d.ts
src/robotkernel/: __init__.py  builders.py  builders_31.py  builders_32.py  completion_finders.py  constants.py  display.py  display_ipykernel.py  display_pyolite.py  exceptions.py  executors.py  install.py  kernel.py  listeners.py  model.py  monkeypatches.py  nbreader.py  selectors.py  selectors_white.py  utils.py
src/robotkernel/resources/: kernel.js  mode.js
src/robotkernel/resources/kernel/: kernel.js  kernel.json
src/robotkernel/resources/notebooks/: quickstart.ipynb
src/robotkernel/resources/notebooks/tutorial/: 00 Keyboard Shortcuts.ipynb  00 What is the Jupyter Notebook.ipynb  01 Running Code.ipynb  02 Python XKCD.ipynb  03 Running Robot.ipynb  04 Robot XKCD.ipynb  05 Interactive Selenium.ipynb  06 Importing Notebooks.ipynb  07 Prototyping Keywords.ipynb  08 Interactive WhiteLibrary.ipynb  09 Prototyping Libraries.ipynb  DateLibrary.ipynb  SeleniumKeywords.ipynb
src/robotkernel/resources/starter/: quickstart-starter.ipynb  robotkernel-starter.json
src/robotkernel/static/starter/: quickstart-starter.ipynb  robotkernel-starter.json
tests/: Resource File.ipynb  Smoketest.ipynb  StickyLibraryMagic.ipynb  Test Inline Python.ipynb  Test Resource.ipynb  smoketest.ipynb  test_builders.py  test_model.py  test_utils.py
