[metadata]
name = robotkernel
version = 0.10.2.dev0
description = A Jupyter kernel for interactive acceptance-test-driven development with the Robot Framework
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/robots-from-jupyter/robotkernel
author = Asko Soukka
author_email = asko.soukka@iki.fi
license = BSD-3-Clause
keywords =
    Interactive
    Interpreter
    Shell
    Testing
    Web
classifiers =
    Framework :: Jupyter
    Framework :: Robot Framework
    Framework :: Robot Framework :: Tool
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
setup_requires =
#   pytest-runner
test_require =
#   jypyter_kernel_test
install_requires =
    docutils
    ipykernel
    lunr
    nbformat
    pillow
    pygments
    robotframework>=3.1
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.package_data]
* =
  resources
  static

[options.data_files]
share/jupyter/kernels/robotkernel =
  src/robotkernel/resources/kernel.js
  src/robotkernel/resources/kernel.json
  src/robotkernel/resources/logo-32x32.png
  src/robotkernel/resources/logo-64x64.png

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    nbrobot = robotkernel.nbreader:robot
    nblibdoc = robotkernel.nbreader:libdoc

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__
max-complexity = 12

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py

[yapf]
based_on_style = pep8
allow_split_before_dict_value = False
allow_multiline_lambdas = True
coalesce_brackets = True
dedent_closing_brackets = True
join_multiple_lines = False
space_between_ending_comma_and_closing_bracket = True
split_arguments_when_comma_terminated = True
split_before_expression_after_opening_paren = True
split_before_first_argument = True
split_complex_comprehension = True
