[metadata]
name = robotkernel
version = 1.4.1.dev0
description = A Jupyter kernel for interactive acceptance-test-driven development with the Robot Framework
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/robots-from-jupyter/robotkernel
author = Asko Soukka
author_email = asko.soukka@iki.fi
license = BSD-3-Clause
keywords =
    Interactive
    Interpreter
    Shell
    Testing
    Web
classifiers =
    Framework :: Jupyter
    Framework :: Robot Framework
    Framework :: Robot Framework :: Tool
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
setup_requires =
    pytest-runner
tests_require =
    pytest
#   jypyter_kernel_test
install_requires =
    docutils
    ipykernel
    ipywidgets
    lunr
    nbformat
    pillow
    pygments
    robotframework>=3.1,!=3.2a1
    setuptools
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.package_data]
* =
  resources

[options.data_files]
share/jupyter/kernels/robotkernel =
  src/robotkernel/resources/kernel/kernel.js
  src/robotkernel/resources/kernel/kernel.json
  src/robotkernel/resources/kernel/logo-32x32.png
  src/robotkernel/resources/kernel/logo-64x64.png
etc/jupyter/jupyter_notebook_config.d =
  src/robotkernel/resources/starter/robotkernel-starter.json

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    nbrobot = robotkernel.nbreader:robot
    nblibdoc = robotkernel.nbreader:libdoc

[aliases]
test = pytest

[isort]
force_alphabetical_sort_within_sections = True
force_single_line = True
from_first = True
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = True
not_skip =
    __init__.py

[pylama]
# linters=pycodestyle,pydocstyle,pyflakes,pylint,eradicate
linters=pycodestyle,pydocstyle,pyflakes,pylint
#ignore=C0301,C0330,C0411,C0412,D202,D203,D213,E501,R0205,R0913,R1716,W0511,C0103

#TODO: Cleanup to match the above
ignore=C0301,C0330,C0411,C0412,D202,D203,D213,E501,R0205,R0913,R1716,W0511,C0103,D100,D101,D102,D103,D104,D107,C0111,D400,D205,W0613,W0611,D209,W0223,R1705,R0911,E203,E113,E1101,E0401,R0902,W0201,C0200,C1801,R0123,R17041,W0212,W0612,R0201,R1704,W0108,R0912,R0914,W0703,W0122,D300,W0703,R0914,R1706,D200,D0407,D413,D406,D401,D407,E0611,R0903,W0104,W0221,W0231,W0621,D412,D417

# C0301 - Enforcing line length when using black makes little sense.
# C0330 - This is a pylint bug and incompatible with black.
# C0411 - Enforcing import order when using isort makes litte sense.
# C0412 - Enforcing import order when using isort makes litte sense.
#  D202 - Black prefer newlines after a funtion docstring.
#  D203 - Black prefer newlines after a class docstring.
#  D213 - Black prefer newlines after a multiline docstring summary.
#  E501 - Enforcing line length when using black makes little sense.
# R0205 - Do not enforce to support Python 2.7
# R0914 - Do not limit the amount of arguments in this project
# R1716 - Allow complex chained comparison between the operands
# W0511 - Allow TODO

[pylama:**/__init__.py]
ignore=W0611

# W0611 - Enforcing unused imports in module __init__ makes little sense.

[pylama:tests/*.py]
#ignore=C0111,D103

#TODO: Cleanup to match the above
ignore=C0111,D103,D100

# C0111 -
#  D103 - Enforcing docstrings for tests might be harmful.
