[metadata]
name = jupyterlite-robotkernel
description = A RobotFramework kernel for JupyterLite
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://robotkernel.rtfd.io
author = Asko Soukka
author_email = asko.soukka@iki.fi
license = BSD-3-Clause
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/robots-from-jupyter/robotkernel/issues
    Changelog = https://github.com/robots-from-jupyter/robotkernel/blob/master/CHANGELOG.rst
    Documentation = https://robotkernel.rtfd.io
    Source Code = https://github.com/robots-from-jupyter/robotkernel
classifiers =
    Development Status :: 4 - Beta
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
    Topic :: Multimedia :: Graphics :: Presentation

[options]
python_requires = >=3.7
package_dir =
    = py_src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    pkginfo
    jupyterlab-widgets
    jupyterlab-robotmode
    jupyterlite >=0.1.0b4

[options.packages.find]
where =
    py_src

[options.entry_points]
jupyterlite.addon.v0 =
    robotkernel = jupyterlite_robotkernel.addons.robotkernel:RobotKernelAddon
